--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Memiliki minat tinggi dalam dunia teknologi, khususnya di bidang pemrograman web
                         <h3 class="project-title">WhatsApp Bot</h3>
                         <p class="project-description">Bot multifungsi dengan antarmuka modern dan responsif menggunakan javaScript.</p>
                         <div class="project-links">
-                            <a href="#" target="_blank">Demo</a>
+                            <a href="https://wa.me/6288221251986" target="_blank">Demo</a>
                             <a href="https://github.com/DzhoeMoe" target="_blank">GitHub</a>
                         </div>
                     </div>
@@ -83,7 +83,7 @@ Memiliki minat tinggi dalam dunia teknologi, khususnya di bidang pemrograman web
                         <h3 class="project-title">Telegram Bot</h3>
                         <p class="project-description">Aplikasi manajemen tugas dengan fitur CRUD menggunakan JavaScript.</p>
                         <div class="project-links">
-                            <a href="#" target="_blank">Demo</a>
+                            <a href="https://web.telegram.org/k/#@shorev1_bot" target="_blank">Demo</a>
                             <a href="https://github.com/DzhoeMoe" target="_blank">GitHub</a>
                         </div>
                     </div>
@@ -171,12 +171,12 @@ Memiliki minat tinggi dalam dunia teknologi, khususnya di bidang pemrograman web
                 <div class="community-item">
                     <h3>JavaScript Indonesia</h3>
                     <p>Komunitas pengembang JavaScript di Indonesia untuk berbagi pengetahuan dan proyek.</p>
-                    <a href="#" class="community-link">Bergabung <i class="fas fa-arrow-right"></i></a>
+                    <a href="https://medium.com/javascript-indonesia-community" class="community-link">Bergabung <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="community-item">
                     <h3>Web Development Pemula</h3>
-                    <p>Grup untuk pemula yang ingin belajar pengembangan web dari dasar.</p>
-                    <a href="#" class="community-link">Bergabung <i class="fas fa-arrow-right"></i></a>
+                    <p>Website untuk pemula yang ingin belajar pengembangan web dari dasar.</p>
+                    <a href="https://campusdigital.id/artikel/web-development-untuk-pemula-dasar-dasar-yang-harus-diketahui?ref=farisfanani" class="community-link">Bergabung <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="community-item">
                     <h3>SMK Tech Community</h3>
