--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@ Memiliki minat tinggi dalam dunia teknologi, khususnya di bidang pemrograman web
                     <a href="https://campusdigital.id/artikel/web-development-untuk-pemula-dasar-dasar-yang-harus-diketahui?ref=farisfanani" class="community-link">Bergabung <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="community-item">
-                    <h3>SMK Tech Community</h3>
-                    <p>Komunitas teknologi untuk siswa SMK di seluruh Indonesia.</p>
-                    <a href="#" class="community-link">Bergabung <i class="fas fa-arrow-right"></i></a>
+                    <h3>SMK Pelita Nusantara 1</h3>
+                    <p>Website SMK Pelita Nusantara 1</p>
+                    <a href="https://smkpns.sch.id/" class="community-link">Bergabung <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
         </section>
