--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@ Memiliki minat tinggi dalam dunia teknologi, khususnya di bidang pemrograman web
                 <div class="community-item">
                     <h3>Web Development Pemula</h3>
                     <p>Website untuk pemula yang ingin belajar pengembangan web dari dasar.</p>
-                    <a href="https://campusdigital.id/artikel/web-development-untuk-pemula-dasar-dasar-yang-harus-diketahui?ref=farisfanani" class="community-link">Bergabung <i class="fas fa-arrow-right"></i></a>
+                    <a href="https://campusdigital.id/artikel/web-development-untuk-pemula-dasar-dasar-yang-harus-diketahui?ref=farisfanani" class="community-link">Kunjungi <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="community-item">
                     <h3>SMK Pelita Nusantara 1</h3>
                     <p>Website SMK Pelita Nusantara 1</p>
-                    <a href="https://smkpns.sch.id/" class="community-link">Bergabung <i class="fas fa-arrow-right"></i></a>
+                    <a href="https://smkpns.sch.id/" class="community-link">Kunjungi <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
         </section>
