--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ Memiliki minat tinggi dalam dunia teknologi, khususnya di bidang pemrograman web
                 <div class="community-item">
                     <h3>JavaScript Indonesia</h3>
                     <p>Komunitas pengembang JavaScript di Indonesia untuk berbagi pengetahuan dan proyek.</p>
-                    <a href="https://medium.com/javascript-indonesia-community" class="community-link">Bergabung <i class="fas fa-arrow-right"></i></a>
+                    <a href="http://bit.ly/JavaScriptIndonesia" class="community-link">Bergabung <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="community-item">
                     <h3>Web Development Pemula</h3>
