--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Memiliki minat tinggi dalam dunia teknologi, khususnya di bidang pemrograman web
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Telegram Bot</h3>
-                        <p class="project-description">Aplikasi manajemen tugas dengan fitur CRUD menggunakan JavaScript.</p>
+                        <p class="project-description">Bot Telegram manajemen tugas dengan fitur CRUD menggunakan JavaScript.</p>
                         <div class="project-links">
                             <a href="https://web.telegram.org/k/#@shorev1_bot" target="_blank">Demo</a>
                             <a href="https://github.com/DzhoeMoe" target="_blank">GitHub</a>
@@ -96,7 +96,7 @@ Memiliki minat tinggi dalam dunia teknologi, khususnya di bidang pemrograman web
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Weather Dashboard</h3>
-                        <p class="project-description">Dashboard cuaca dengan API integration untuk menampilkan data real-time.</p>
+                        <p class="project-description">Web AI sederhana yang menggunakan API sebagai asisten pembantu.</p>
                         <div class="project-links">
                             <a href="#" target="_blank">Demo</a>
                             <a href="https://github.com/DzhoeMoe" target="_blank">GitHub</a>
