--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Memiliki minat tinggi dalam dunia teknologi, khususnya di bidang pemrograman web
                 <!-- Project 3 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://via.placeholder.com/600x400?text=Project+3" alt="Project 3">
+                        <img src="Media/ai.jpeg" alt="Project 3">
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Weather Dashboard</h3>
