--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@ Memiliki minat tinggi dalam dunia teknologi, khususnya di bidang pemrograman web
                         <img src="Media/ai.jpeg" alt="Project 3">
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Weather Dashboard</h3>
-                        <p class="project-description">Web AI sederhana yang menggunakan API sebagai asisten pembantu.</p>
+                        <h3 class="project-title">AI Website</h3>
+                        <p class="project-description">Web AI sederhana yang menggunakan API sebagai asisten pribadi.</p>
                         <div class="project-links">
                             <a href="#" target="_blank">Demo</a>
                             <a href="https://github.com/DzhoeMoe" target="_blank">GitHub</a>
