--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@ Memiliki minat tinggi dalam dunia teknologi, khususnya di bidang pemrograman web
                 <!-- Project 4 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://via.placeholder.com/600x400?text=Project+4" alt="Project 4">
+                        <img src="Media/generator" alt="Project 4">
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">E-commerce UI</h3>
-                        <p class="project-description">Tampilan antarmuka e-commerce dengan animasi interaktif.</p>
+                        <h3 class="project-title">AI Image Generator</h3>
+                        <p class="project-description">AI image generator menggunakan kecerdasan buatan untuk menghasilkan gambar secara otomatis berdasarkan deskripsi teks pengguna.</p>
                         <div class="project-links">
                             <a href="#" target="_blank">Demo</a>
                             <a href="https://github.com/DzhoeMoe" target="_blank">GitHub</a>
