--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Memiliki minat tinggi dalam dunia teknologi, khususnya di bidang pemrograman web
                 <!-- Project 4 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="Media/generator" alt="Project 4">
+                        <img src="Media/generator.jpeg" alt="Project 4">
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">AI Image Generator</h3>
