--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Memiliki minat tinggi dalam dunia teknologi, khususnya di bidang pemrograman web
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">AI Image Generator</h3>
-                        <p class="project-description">AI image generator menggunakan kecerdasan buatan untuk menghasilkan gambar secara otomatis berdasarkan deskripsi teks pengguna.</p>
+                        <p class="project-description">AI image generator menggunakan kecerdasan buatan untuk menghasilkan gambar secara otomatis</p>
                         <div class="project-links">
                             <a href="#" target="_blank">Demo</a>
                             <a href="https://github.com/DzhoeMoe" target="_blank">GitHub</a>
